Update tsconfig.app.json to refine TypeScript app configuration and path settings

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,10 +5,14 @@
     "useDefineForClassFields": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "types": ["vite/client"],
+    "types": ["vite/client", "react"],
     "skipLibCheck": true,
 
     "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
